# anamnesis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  SPEC.md  app.py  docker-compose.yml  pyproject.toml  requirements-vercel.txt  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  cards.py  deps.py  index.py  main.py  validation.py
api/routes/: assess.py  chat.py  deployer.py  funding.py  graph.py  graph_static.py  price.py  profile.py
app/: cards.py  deps.py  main.py
app/routes/: assess.py  chat.py  deployer.py  funding.py  graph.py  graph_static.py  price.py  profile.py
deploy/: RUNBOOK.md  apsaradb.py  vercel-runbook.md
deploy/nginx/: anamnesis-cloudflare.conf  anamnesis.conf
docs/design/: 2026-06-24-a8-mcp-server.md  2026-06-24-a9-agent-assembly-design.md  2026-06-25-a8b-funding-deployer-history-design.md  2026-06-25-lp-secured-detection-design.md  2026-06-27-a10-demo-seed-design.md  2026-06-27-b1-memoryagent-acts-design.md  2026-06-27-b2-relationship-graph-view-design.md  2026-07-04-ui-revamp-design.md
docs/plans/: 2026-06-24-a8-mcp-server.md  2026-06-24-a9-agent-assembly.md  2026-06-25-a8b-funding-deployer-history.md  2026-06-25-lp-secured-detection.md  2026-06-27-b1-memoryagent-acts.md  2026-06-27-b2-relationship-graph-view.md  2026-07-04-ui-revamp.md
docs/runbooks/: access-gates.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.ts  main.tsx  setupTests.ts  types.ts
frontend/src/components/: AutopilotActions.test.tsx  AutopilotActions.tsx  Card.test.tsx  (+31 more)
mcp/: solana_forensics_mcp.py
scripts/: check_helius.py  check_mongo.py  check_qwen.py  lp_smoke.py  seed_demo.py
src/anamnesis/: __init__.py  assess.py  config.py  demo_seed.py  logging_setup.py  risk.py
tests/: conftest.py  test_actions.py  test_agent_assembly.py  test_agent_tool_registration.py  test_agent_tools.py  test_alerts_store.py  test_app_entrypoint.py  test_assess.py  test_cluster.py  test_config.py  test_demo_seed.py  test_graph_server.py  test_graph_view.py  test_helius.py  test_logging_setup.py  test_lp.py  test_lp_model.py  test_mcp_server_registration.py  test_mcp_tools.py  test_memory_graph.py  test_memory_models.py  test_mongo_store.py  test_pools.py  test_risk.py  test_serialize.py  test_signals.py
tests/api/: test_assess_route.py  test_cards.py  test_chat_route.py  test_deps.py  test_graph_price_route.py  test_graph_static_route.py  test_procards_routes.py  test_static_spa.py
tests/app/: test_assess_route.py  test_cards.py  test_chat_route.py  test_deps.py  test_graph_price_route.py  test_graph_static_route.py  test_procards_routes.py  test_static_spa.py
tests/fixtures/: lp_pool_accounts.json
(+25 files in other folders)
