[project]
name = "anamnesis"
version = "0.1.0"
description = "Solana pre-trade forensic agent with compounding bi-temporal memory"
requires-python = ">=3.12"
dependencies = [
  # qwen-agent + mcp are pinned (not >=): newer versions trigger heavy pip backtracking that makes
  # the Docker/ECS build slow and timeout-prone. These are the dev- and container-validated
  # versions — bump deliberately and re-validate the build (see deploy/RUNBOOK.md).
  "qwen-agent[gui,mcp]==0.0.34",
  # qwen_agent.utils imports soundfile unconditionally, but the [gui,mcp] extra does not
  # pull it — so `import qwen_agent` (any submodule) fails without this. Declare it so a
  # plain `pip install -e .` yields a working agent/MCP/WebUI runtime (A.8/A.9/deploy).
  "soundfile>=0.12",
  "openai>=1.40",
  "httpx>=0.27",
  "pymongo>=4.6,<5",
  "mcp==1.12.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "respx>=0.21", "mongomock>=4.1"]
# Pinned (not >=) for the same reason as the engine deps above: fastapi/uvicorn/sse-starlette
# are dev- and .venv-validated at these exact versions, which already coexist with the pinned
# mcp==1.12.4 (mcp itself pulls sse-starlette/starlette/uvicorn transitively). Bump deliberately.
api = ["fastapi==0.138.0", "uvicorn[standard]==0.49.0", "sse-starlette==3.4.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Vercel Python runtime: force the entrypoint to the api/index.py shim, which puts src/ on
# sys.path so the frozen `anamnesis` package imports. Without this, Vercel's entrypoint
# auto-detection picks app/main.py (a "main.py inside app/" — one of its search patterns) as
# the entry, bypassing the shim, so `anamnesis` is unimportable (ModuleNotFoundError). See
# deploy/vercel-runbook.md §1/§6.4.
[tool.vercel]
entrypoint = "api.index:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
